--- a/admin-payments.html
+++ b/admin-payments.html
@@ -390,8 +390,7 @@
     </div>
 
     <script>
-        const SUPABASE_URL = 'https://ovszuxerimbmzfblzkgd.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14';
+        // Supabase config (inline to avoid conflicts)
         let sb;
         let selectedTier = 'champion'; // Default
 
@@ -410,8 +409,11 @@
             const hasAccess = await AdminGuard.requireAdmin();
             if (!hasAccess) return;
 
-            // Initialize Supabase
-            sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+            // Initialize Supabase (inline)
+            sb = supabase.createClient(
+                'https://ovszuxerimbmzfblzkgd.supabase.co',
+                'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14'
+            );
 
             // Render tiers
             renderTiers();
