--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <title>Admin Dashboard - LogicPals</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="admin-guard.js"></script>
+    <script src="/app/guards/admin-guard.js"></script>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
