--- a/learn.html
+++ b/learn.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="subscription-guard.js"></script>
-
+    <script src="/app/guards/subscription-guard.js"></script>
     <style>
         :root { --primary: #4F46E5; --success: #10B981; --warning: #F59E0B; --bg: #F3F4F6; }
         * { box-sizing: border-box; margin: 0; padding: 0; }
