--- a/admin.html
+++ b/admin.html
@@ -1664,7 +1664,7 @@ await refresh();
 
 
   <!-- Roles Modal (super admin) -->
-  <div class="lp-modal-backdrop" id="rolesBackdrop" hidden>
+  <div class="lp-modal-backdrop" id="rolesBackdrop" style="display:none">
     <div class="lp-modal" role="dialog" aria-modal="true" aria-labelledby="rolesTitle" style="max-width:760px;">
       <div class="lp-modal-head">
         <h3 id="rolesTitle">Admin roles</h3>
