--- a/admin.html
+++ b/admin.html
@@ -491,44 +491,80 @@
     // =====================
     // Role + session loading
     // =====================
-    async function getMyRole(){
-      // Preferred: RPC that returns role text.
-      // Fallback: query user_roles for current user_id.
-      if(!myUser) return { role:null, source:'none' };
+    
+// ---- Role cache (prevents UI flicker when RPC is slow) ----
+const ROLE_CACHE_KEY = 'lp_admin_role_cache_v1';
+function loadRoleCache(){
+  try{ return JSON.parse(sessionStorage.getItem(ROLE_CACHE_KEY) || '{}') || {}; }catch{ return {}; }
+}
+function saveRoleCache(userId, role){
+  if(!userId || !role) return;
+  const c = loadRoleCache();
+  c[userId] = { role, ts: Date.now() };
+  sessionStorage.setItem(ROLE_CACHE_KEY, JSON.stringify(c));
+}
+function getCachedRole(userId){
+  const c = loadRoleCache();
+  const entry = c[userId];
+  if(!entry) return null;
+  // 24h TTL
+  if(Date.now() - (entry.ts||0) > 24*60*60*1000) return null;
+  return entry.role || null;
+}
 
-      // Try RPC: admin_get_my_roles() or get_my_role()
-      const rpcCandidates = ['admin_get_my_roles','get_my_role'];
-      for(const fn of rpcCandidates){
-        try{
-          const { data, error } = await supabase.rpc(fn);
-          if(!error && data){
-            // data can be [{role:'super_admin'}] or {role:'super_admin'} or 'super_admin'
-            let r = null;
-            if(typeof data === 'string') r = data;
-            else if(Array.isArray(data) && data.length) r = data[0]?.role || data[0]?.role_name || null;
-            else if(typeof data === 'object') r = data.role || data.role_name || null;
-            if(r){
-              return { role: String(r), source:`rpc:${fn}` };
-            }
-          }
-        } catch(e){ /* ignore */ }
-      }
+async function getMyRole() {
+  // IMPORTANT: don't immediately wipe role to null when auth is still settling.
+  // We'll retry a few times before concluding "no role".
 
-      // Fallback table query
-      const { data: rows, error } = await supabase
-        .from('user_roles')
-        .select('role')
-        .eq('user_id', myUser.id)
-        .limit(1);
+  const session = (await supabase.auth.getSession()).data.session;
+  const userId = session?.user?.id;
+  if(!userId) return null;
 
-      if(error){
-        return { role:null, source:'user_roles:error' };
-      }
-      const r = rows?.[0]?.role ?? null;
-      return { role: r ? String(r) : null, source:'user_roles' };
+  const tryFetch = async () => {
+    // Prefer RPC (stable + RLS-safe)
+    for (const fn of ['admin_get_my_role','admin_get_my_roles']) {
+      try {
+        const { data, error } = await supabase.rpc(fn);
+        if (error) continue;
+        if (data == null) continue;
+        if (Array.isArray(data)) return data[0] || null;
+        if (typeof data === 'object' && data.role) return data.role;
+        if (typeof data === 'string') return data;
+      } catch (_) {}
     }
 
-    async function refreshSessionUI(){
+    // Fallback: read from table (may be blocked by RLS in some setups)
+    try {
+      const { data, error } = await supabase
+        .from('user_roles')
+        .select('role')
+        .eq('user_id', userId)
+        .maybeSingle();
+      if (!error && data?.role) return data.role;
+    } catch (_) {}
+
+    return null;
+  };
+
+  const backoff = [0, 200, 600, 1200];
+  let role = null;
+  for (let i=0; i<backoff.length; i++){
+    if(backoff[i]) await new Promise(r=>setTimeout(r, backoff[i]));
+    role = await tryFetch();
+    if(role) break;
+  }
+
+  if(role){
+    saveRoleCache(userId, role);
+    return role;
+  }
+
+  // If we couldn't fetch, keep cached role (prevents flicker)
+  const cached = getCachedRole(userId);
+  return cached;
+}
+
+async function refreshSessionUI(){
       const { data } = await supabase.auth.getSession();
       const session = data?.session || null;
       myUser = session?.user || null;
@@ -827,7 +863,63 @@
 
     btnApply.onclick = loadQueue;
     btnRefresh.onclick = loadQueue;
-    btnAdd.onclick = ()=> toast('Add problem', 'Hook this to your content pipeline or an RPC later.');
+    btnAdd.onclick = async ()=>{
+      // Minimal, reliable "upload" flow: paste JSON for a problem and insert.
+      // You can later replace this with a full form + file uploader.
+      if (!session || !session.user) return toast('Not signed in','Please sign in first.');
+      if (!canAccess(currentMode)) return toast('No access','You do not have permission for this section.');
+
+      const template = {
+        title: 'Title',
+        problem_text: 'Problem text...',
+        answer_key: 'answer|alt1|alt2',
+        solution_explanation: 'Explain why...',
+        age_category: '9-10',
+        difficulty: 'medium',
+        category: currentMode==='olympiad' ? 'olympiad' : 'logic',
+        curriculum_tags: ['Tag1','Tag2'],
+        hints: ['Hint 1','Hint 2','Hint 3'],
+        socratic_questions: ['Q1','Q2','Q3'],
+        is_exam_style: currentMode==='olympiad',
+        is_active: true
+      };
+      const raw = prompt('Paste a JSON object for the new problem (edit the template):', JSON.stringify(template, null, 2));
+      if (!raw) return;
+      let data;
+      try { data = JSON.parse(raw); } catch(e){ return toast('Invalid JSON', String(e)); }
+
+      // Normalize arrays
+      if (Array.isArray(data.hints)) data.hints = JSON.stringify(data.hints);
+      if (Array.isArray(data.socratic_questions)) data.socratic_questions = JSON.stringify(data.socratic_questions);
+
+      // Insert
+      setStatus('Inserting...');
+      try {
+        const payload = {
+          title: data.title,
+          problem_text: data.problem_text,
+          answer_key: data.answer_key,
+          solution_explanation: data.solution_explanation,
+          age_category: data.age_category,
+          difficulty: (data.difficulty||'').toLowerCase(),
+          category: data.category || (currentMode==='olympiad' ? 'olympiad' : 'logic'),
+          curriculum_tags: Array.isArray(data.curriculum_tags) ? data.curriculum_tags : [],
+          hints: (typeof data.hints==='string') ? JSON.parse(data.hints) : (Array.isArray(data.hints)?data.hints:[]),
+          socratic_questions: (typeof data.socratic_questions==='string') ? JSON.parse(data.socratic_questions) : (Array.isArray(data.socratic_questions)?data.socratic_questions:[]),
+          is_exam_style: !!data.is_exam_style,
+          is_active: data.is_active !== false
+        };
+
+        const { error } = await supabase.from('problems').insert(payload);
+        if (error) throw error;
+        toast('Saved','Problem inserted.');
+        await listProblems();
+      } catch(err){
+        toast('Insert failed', err?.message || String(err));
+      } finally {
+        setStatus('Ready');
+      }
+    };
 
     btnLookup.onclick = async ()=> {
       usersOut.textContent = 'Loading…';
@@ -862,5 +954,102 @@
     await setView('dashboard');
 
   </script>
+
+  <!-- Problem modal (Add / Edit) -->
+  <div class="overlay" id="problemOverlay">
+    <div class="modal">
+      <div style="display:flex; align-items:center; justify-content:space-between; gap:10px;">
+        <div>
+          <div class="brand" style="margin:0;">
+            <div class="logo"></div>
+            <div>
+              <div class="title" id="pmTitle">Problem editor</div>
+              <div class="subtitle" id="pmSub">Add or update a problem</div>
+            </div>
+          </div>
+        </div>
+        <button class="btn" id="pmClose">Close</button>
+      </div>
+
+      <div class="grid" style="grid-template-columns: 1fr 1fr;">
+        <div>
+          <label>Title</label>
+          <input id="pm_problem_title" placeholder="e.g., Mango basket logic" />
+        </div>
+        <div>
+          <label>Category</label>
+          <input id="pm_problem_category" placeholder="e.g., logic / arithmetic / patterns" />
+        </div>
+        <div>
+          <label>Age category</label>
+          <input id="pm_problem_age" placeholder="e.g., 9-10" />
+        </div>
+        <div>
+          <label>Difficulty</label>
+          <select id="pm_problem_difficulty">
+            <option value="easy">easy</option>
+            <option value="medium">medium</option>
+            <option value="hard">hard</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="grid" style="grid-template-columns: 1fr 1fr;">
+        <div>
+          <label>Track</label>
+          <select id="pm_problem_track">
+            <option value="regular">Regular (is_exam_style = false)</option>
+            <option value="olympiad">Olympiad (is_exam_style = true)</option>
+          </select>
+        </div>
+        <div>
+          <label>Active</label>
+          <select id="pm_problem_active">
+            <option value="true">true</option>
+            <option value="false">false</option>
+          </select>
+        </div>
+      </div>
+
+      <div style="margin-top:10px;">
+        <label>Problem text</label>
+        <textarea id="pm_problem_text" placeholder="Write the problem statement…"></textarea>
+      </div>
+
+      <div class="grid" style="grid-template-columns: 1fr 1fr;">
+        <div>
+          <label>Answer key (pipe-separated)</label>
+          <input id="pm_problem_answer" placeholder="e.g., 12|twelve" />
+        </div>
+        <div>
+          <label>Curriculum tags (comma-separated)</label>
+          <input id="pm_problem_tags" placeholder="e.g., Patterns, Counting, BdMO" />
+        </div>
+      </div>
+
+      <div style="margin-top:10px;">
+        <label>Solution explanation</label>
+        <textarea id="pm_problem_solution" placeholder="Explain why the answer is correct…"></textarea>
+      </div>
+
+      <div class="grid" style="grid-template-columns: 1fr 1fr;">
+        <div>
+          <label>Hints (JSON array)</label>
+          <textarea id="pm_problem_hints" placeholder='["Hint 1", "Hint 2", "Hint 3"]'></textarea>
+        </div>
+        <div>
+          <label>Socratic questions (JSON array)</label>
+          <textarea id="pm_problem_socratic" placeholder='["What do you notice?", "What is the pattern?"]'></textarea>
+        </div>
+      </div>
+
+      <div class="actions" style="justify-content:flex-end; margin-top:12px;">
+        <button class="btn" id="pmDelete" style="display:none;">Delete</button>
+        <button class="btn" id="pmSave">Save</button>
+      </div>
+      <pre class="mono" id="pmOut" style="margin-top:10px;"> </pre>
+    </div>
+  </div>
+
 </body>
 </html>
