--- a/admin.html
+++ b/admin.html
@@ -306,14 +306,20 @@
 
   <div class="toast" id="toast"><div class="t1" id="toastT1"></div><div class="t2" id="toastT2"></div></div>
 
+  <script src="/api/env"></script>
+
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
     // =====================
     // CONFIG (same as before)
     // =====================
-    const SUPABASE_URL = "https://ovszuxerimbmzfblzkgd.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14";
+    // Runtime config injected by Vercel (public values only)
+    const { SUPABASE_URL, SUPABASE_ANON_KEY } = window.__LP_ENV || {};
+    if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
+      alert("Missing Supabase config. Set SUPABASE_URL and SUPABASE_ANON_KEY in Vercel Environment Variables.");
+    }
+
 
     // IMPORTANT:
     // - persistSession keeps login stable across refresh.
