--- a/learn.html
+++ b/learn.html
@@ -9,7 +9,7 @@
     <script src="/api/env"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="/app/guards/subscription-guard.js"></script>
+    <script src="/subscription-guard.js" defer></script>
     <style>
         :root { --primary: #4F46E5; --success: #10B981; --warning: #F59E0B; --bg: #F3F4F6; }
         * { box-sizing: border-box; margin: 0; padding: 0; }
